--- a/tabletop/tabltop.html
+++ b/tabletop/tabltop.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="eng">
+<!-- // end up -->
 
 <head>
     <title>table top.js</title>
     <style type="text/css">
         body {
+            background-image: -webkit-image-set(hello);
             background-color: saddlebrown;
+            font-size: large;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            font-style: oblique;
+            border: 1px;
+            float: left;
+            position: absolut;
+            position: relative;
         }
     </style>
 
@@ -29,6 +38,19 @@
             alert('Successfully processed!')
             console.log(data);
         }
+        var seACHBAR = document.addEventListener(click, function() {
+
+
+
+            var docu = document.querySelector().value;
+            // this part is for gettting ready and make some fun , and  i will delete it right now 
+            // goodebye 
+            // nglo 
+
+
+
+
+        })
 
         window.addEventListener('DOMContentLoaded', init)
     </script>
